# bookshelf

./: README.org  bookshelf.db  pyproject.toml
api/: __init__.py  factory.py
api/books/: __init__.py  models.py  routes.py
