[tool.poetry]
name = "bookshelf"
version = "0.0.1"
description = "Book requesting service"
authors = ["Eugene Rwagasore <rwagasore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
voluptuous = "^0.12.2"
python-dotenv = "^0.19.2"
marshmallow = "^3.15.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
